# tinycbg

./: .gitignore  Cargo.toml  README.md  test.cgp
.github/workflows/: test.yml
src/: error.rs  indexing.rs  iter.rs  lib.rs  normal_fmt.rs  tile.rs
tests/: cbg.rs  iter.rs  line.rs  serialization.rs
tests/patterns/: test.cgp
tests/patterns/valid/: max_len.cgp  range.cgp
