[package]
name = "tinycbg"
version = "0.9.0"
edition = "2024"
exclude = ["tests/patterns/**", "images/"]
description = "A tiny crate for working with ULTRAKILL's Cybergrind Patterns programatically."
keywords = ["ultrakill", "cybergrind"]
repository = "https://github.com/Duckless137/tinycbg"
readme = "README.md"
license = "MIT"
license-file = "LICENSE.md"
